@startuml
skinparam dpi 150
skinparam ArrowLinetype ortho
left to right direction

' ==== VIEW Layer ====
rectangle "View" #ADD8E6 {
  class QuantumCircuitPanel {
    + drawGrid()
    + clearGrid()
    + updateUI()
    + getPanel()
    + setBottomPanel()
    + hasActiveCells()
    + savePatternToFile(File)
    + loadPatternFromFile(File)
  }

  class LeftPanel {
    + updateUI()
    + getPanel()
  }

  class SettingsWindow {
    + show()
  }

  class MenuBarPanel {
    + getMenuBar()
    + rebuildMenuBar()
  }

  class BottomPanel {
    + getPanel()
    + updateStatus(String)
  }

  class TopBarPanel {
    + getPanel()
  }
}

' ==== MODEL Layer ====
rectangle "Model" #98FB98 {
  class CircuitModel {
    + addGate(Gate)
    + removeGate(int, int)
    + saveToFile(File)
    + loadFromFile(File)
  }

  class Gate

  class SettingsManager {
    + getBundle()
    + getTheme()
    + isDesignMode()
    + setLanguage(String)
    + getLanguage()
    + setTheme(String)
    + toggleMode()
  }

  class File <<utility>>
}

' ==== CONTROLLER Layer ====
rectangle "Controller" #FFB6C1 {
  class CircuitController {
    + toggleMode()
    + stepForward()
    + stepBackward()
    + reset()
  }
}

' ==== INFRASTRUCTURE / UTILITY ====
rectangle "Infrastructure" #D3D3D3 {
  class EventBus {
    + getInstance()
    + subscribe(EventListener)
    + publish(String)
  }

  interface EventListener {
    + onEvent(String)
  }
}

' ==== Relationships ====
QuantumCircuitPanel --> EventBus : subscribes
LeftPanel --> EventBus : subscribes
SettingsWindow --> SettingsManager
QuantumCircuitPanel --> CircuitModel
CircuitModel --> Gate
CircuitModel --> File : uses
CircuitController --> QuantumCircuitPanel : calls
CircuitController --> LeftPanel : calls
MenuBarPanel --> CircuitController : triggers actions
SettingsWindow --> CircuitController : triggers actions
EventBus --> EventListener

@enduml
